# wikiquote-to-git

./: Cargo.toml
src/: category_graph.rs  cite_extractor.rs  main.rs  text_extractor.rs
