[package]
name = "wikiquote"
version = "0.1.0"
authors = ["Tomasz Cichocki <cichymail@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#zim = "0.3"
parse_mediawiki_dump = "0.1"
parse_wiki_text = "0.1"
bzip2 = "0.4"
structopt = "0.3"
#confy = "0.4"
#serde = "1.0"
#serde_derive = "1.0"